--- a/src/main/webapp/css/cart.css
+++ b/src/main/webapp/css/cart.css
@@ -46,7 +46,7 @@ div {
 	left: 0;
 	display: block;
 	max-width: 1240px;
-	margin: 0 auto;
+	margin: 0 100px;
 	padding: 0 60px;
 	background: #fff;
 	
@@ -62,7 +62,7 @@ div {
 	font-weight: 500;
 	letter-spacing: -.6px;
 	color: #333;
-	text-align: center;
+	margin: 0 -10 0 0;
 }
 
 .cart_header
@@ -88,19 +88,21 @@ div {
 }
 
 .cart_div4 {
-/* 	width: 1120px; */
 	width: 1240px;
 	height: 480.58px;
 }
 
 .cart_table {
 	border-collapse: collapse;
+	border: none;
 }
 
 .cart_td {
 	background: #f7f7f7;
 	width: 504px;
 	height: 28px;
+	border: none;
+	border-top: none;
 }
 
 .cart_input {
@@ -152,9 +154,12 @@ div {
 .cart_img {
 	width: 150px;
 	height: 150px;
-	margin-right: 20px;
 	margin-left: 20px;
 	float: left;
+}
+
+.cart_tr {
+	border-top: none;
 }
 
 .cart_td2 {
@@ -169,15 +174,16 @@ div {
 }
 
 .cart_span4 {
-	width: 304px;
+	width: 160px;
 	height: 24px;
+	padding: 0 15px;
 	padding-right: 30px;
     font-size: 16px;
     line-height: 24px;
     font-weight: 500;
     letter-spacing: -.24px;
     color: #222;
-    display: contents;
+    display: inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
     -webkit-line-clamp: 2;
@@ -198,6 +204,7 @@ div {
 }
 
 .cart_span5 {
+	width: 200px;
 	width: 114.25px;
 	height: 20.8px;
 	font-size: 14px;
@@ -205,6 +212,8 @@ div {
     font-weight: 100;
     letter-spacing: -.21px;
     color: #787878;
+    float: left;
+/*     text-align: left; */
 }
 
 .cart_span6 {
@@ -293,17 +302,20 @@ div {
     height: 380.58px;
 }
 
+p {
+	display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 .cart_p {
 	width: 1070px;
 	height: 134px;
 	padding: 30px 55px;
 	margin-top: 0;
 	background: #f7f7f7;
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
 }
 
 .cart_strong {
@@ -322,4 +334,192 @@ div {
     letter-spacing: -.21px;
     color: #222;
 }
+
+.cart_p2 {
+	width: 1070px;
+	height: 114.58px;
+	margin-top: 40px;
+	padding: 40px 0;
+    border-top: #ffcd32 2px solid;
+    background: #fff9ee;
+    text-align: center;
+}
+
+.cart_span12 {
+	width: 210px;
+    height: 31.38px;
+    display: inline-block;
+    font-size: 18px;
+    line-height: 29px;
+    font-weight: 100;
+    letter-spacing: -.3px;
+    color: #222;
+    margin: 0;
+    padding: 0;
+}
+
+.cart_span13 {
+	width: 94.65px;
+	height: 28.8px;
+	display: contents;
+    float: none;
+    margin-right: 0;
+    vertical-align: middle;
+    text-align: left;
+}
+
+.cart_span14 {
+	width: 79.26px;
+	height: 28.8px;
+	margin-left: 0 0 0 20px;
+	display: contents;
+    text-align: left;
+    vertical-align: middle;
+    font-weight: 500;
+    overflow: hidden;
+	
+}
+
+.cart_span15 {
+	display: inline-block;
+	width: 40.4px;
+	height: 28.8px;
+    padding: 0 15px;
+    font-size: 23px;
+    line-height: 29px;
+    font-weight: 100;
+    letter-spacing: -.3px;
+    color: #222;
+    vertical-align: -2px;
+    
+}
+
+.cart_span16 {
+	width: 60px;
+    height: 28.8px;
+    margin-left: 5px;
+    display: inline-block;
+    text-align: left;
+    vertical-align: bottom;
+    font-weight: 500;
+    overflow: hidden;
+} 
+
+.cart_span17 {
+	width: 233.45px;
+	height: 32.58px;
+	margin-top: 0;
+	padding-top: 0;
+    border-top: none;
+    vertical-align: bottom;
+}
+
+.cart_span18 {
+	font-size: 23px;
+    line-height: 29px;
+    font-weight: 500;
+    display: inline-block;
+    float: none;
+    margin-right: 0;
+    text-align: left;
+}
+
+.cart_span19 {
+	width: 40.4px;
+	height: 28.8px;
+	padding: 0 8px;
+	font-size: 23px;
+}
+
+.cart_span20 {
+	width: 100.8px;
+	height: 31.2px;
+	font-size: 23px;
+    line-height: 29px;
+    display: inline-block;
+    font-weight: 500;
+    letter-spacing: -.39px;
+    color: #0d0d0d;
+}
+
+.cart_div6 {
+	width: 370px;
+	height: 52px;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 350px;
+ 	
+}
+
+.cart_div7 {
+	width: 370px;
+	height: 52px;
+	flex: 1;
+    padding: 0 5px;
+    display: block;
+    margin: 0;
+}
+
+.cart_input5 {
+	width:360px;
+	height: 52px;
+    font-size: 16px;
+    line-height: 52px;
+    font-weight: 300;
+    letter-spacing: -.24px;
+    color: #0d0d0d;
+    padding: 0;
+    margin: 0;
+    border: none;
+    outline: 0;
+    cursor: pointer;
+    display: inline-block;
+    border-radius: 5px;
+    background: #ffcd32;
+    text-align: center;
+}
+
+.cart_p3 {
+	width: 1120px;
+	height: 392px;
+	padding: 80px 0 100px;
+    font-size: 18px;
+    line-height: 40px;
+    font-weight: 300;
+    letter-spacing: -.27px;
+    color: #787878;
+}
+
+.cart_span21 {
+	width: 1120px;
+	height: 80px;
+	margin-top: 0;
+	text-align: center;
+}
+
+.cart_input6 {
+	padding: 0;
+	margin-top: 80px;
+	width: 360px;
+    height: 52px;
+    margin: 0 auto;
+    font-size: 16px;
+    line-height: 52px;
+    font-weight: 300;
+    letter-spacing: -.24px;
+    color: #1b1b1b;
+    border: none;
+    outline: 0;
+    cursor: pointer;
+    display: block;
+    border-radius: 5px;
+    background: #ffcd32;
+}
+
+
+
+
+
+
 
