--- a/src/main/webapp/css/mypage_memberPoint.css
+++ b/src/main/webapp/css/mypage_memberPoint.css
@@ -34,7 +34,7 @@ a, button {
 	width: 809.65px;
 	height: 540.4px;
 	float: right;
-	padding-top: 40px;
+/* 	padding-top: 40px; */
 	display: block;
 	
 }
