--- a/src/main/webapp/css/itemDetail.css
+++ b/src/main/webapp/css/itemDetail.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+html {
+	scroll-behavior: smooth;
+}
+
 /* 리뷰 ajax에 쓰이는 코드  */
 ul.tabs{
 	margin: 0px;
@@ -10,7 +14,6 @@ ul.tabs{
  	background: none; 
  	display: inline-block; 
  	padding: 10px 15px; 
- 	cursor: pointer; 
  } 
 ul.tabs li.current{
 	color: #222;
@@ -53,23 +56,23 @@ ul.tabs li.current{
 
 .images_4 {
 	margin-top: 15px;
-	width: 550px;
+	width: 570px;
+	display: flex;
 }
 
 .images_4 .image {
-	display: inline-block;
+	flex: 1;
+	transition-delay: 1s;
 }
 
 .images_4 .image button {
 	border: none;
+	width: 122px;
+	height: 122px;
 }
 
-.change_img[name="1"] {
-	margin: 0 17.5px;
-}
-
-.change_img[name="2"] {
-	margin-right: 17.5px;
+.images_4 .active img {
+	border: solid 1px #ffd324;
 }
 
 /*  */
@@ -309,6 +312,11 @@ ul.tabs li.current{
 	margin: 0 auto;
 }
 
+.sticky.visible {
+	position: sticky;
+	bottom: 0px;
+}
+
 .middle_nav {
 	height: 53px;
 	margin-bottom: 60px;
@@ -326,6 +334,8 @@ ul.tabs li.current{
 	color: #888888;
 	line-height: 50px;
 	border: solid 1px #eeeeee;
+	cursor: pointer;
+	background: white;
 }
 
 .middle_nav .active {
