--- a/src/main/webapp/css/join.css
+++ b/src/main/webapp/css/join.css
@@ -1,4 +1,36 @@
 @charset "UTF-8";
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
+}
+
+body {
+  box-sizing: border-box;
+}
+
+.top_banner {
+	top: 36px;
+	position: static;
+	display: block;
+	max-width: 1240px;
+    margin: 0 auto;
+    padding: 0 60px;
+    text-align: center;
+}
+
+.top_banner h2 {
+    height: auto;
+    padding: 40px 0;
+    border-bottom: none;
+    font-size: 30px;
+    line-height: 45px;
+    font-weight: 800;
+    letter-spacing: -.6px;
+    color: #333;
+}
 
 .join_us_box {
     max-width: 1120px;
@@ -65,6 +97,43 @@
     color: #222;
 }
 
+.join_us_box .row .join_input .textbox_long{
+	float: left;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    width: 45%;
+    height: 44px;
+    margin-right: 10px;
+    padding: 0 20px;
+    border-radius: 5px;
+    border: #d3d3d3 1px solid;
+    font-size: 14px;
+    line-height: 44px;
+    font-weight: 300;
+    letter-spacing: -.21px;
+    color: #222;	
+}
+
+.join_us_box .row .join_input .textbox_short {
+	float: left;
+	position: relative;
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+    width: 22%;
+    height: 44px;
+    margin-right: 12px;
+    padding: 0 20px;
+    border-radius: 5px;
+    border: #d3d3d3 1px solid;
+    font-size: 14px;
+    line-height: 44px;
+    font-weight: 300;
+    letter-spacing: -.21px;
+    color: #222;	
+}
+
 .join_us_box .row .join_input .btn {
     border: none;
     cursor: pointer;
@@ -84,6 +153,19 @@
     text-align: center;
 }
 
+.join_us_box .row .join_input .radio_gender {
+	width: 120px;
+	height: 30px;
+	margin-right: 20px;
+	text-align: center;
+	font-size: 20px;	
+}
+
+.join_us_box .row .join_input .gender_txt {
+	font-size: 14px;
+	font-weight: 300;	
+}
+
 .checkMessage{
 	color: #FF0000;
 	padding-bottom: 5px;
@@ -99,23 +181,38 @@
 }
 
 ul {
-	list-style: none;	
+	list-style: none;
 	margin: 0;
     padding: 0;
     letter-spacing: -.5px;
     outline-width: 1px;
 }
 
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+    line-height: 15px;
+}
+
 .join_us_box .bottomForm .agreement_list {
     padding: 10px 20px 20px;
     border: #ececec 1px solid;
     border-radius: 5px;
+    padding: 30px 20px;    
+    font-size: 16px;
+    margin-top: 10px;
 }
 
-.join_us_box .row_agree .agreement_list .agree_part {
+.join_us_box .row .agreement_list .agree_part {
     margin-top: 20px;
-    padding-top: 10px;
-    border-top: #ececec 1px solid;
+    padding-top: 10px;   
+    
+}
+
+.join_us_box .row .agreement_list .agree_part:first-of-type {
+    margin-top: 20px;
+    padding-top: 10px;    
+	border-top: #ececec 1px solid;
 }
 
 .agree_terms {
@@ -128,11 +225,12 @@ ul {
     color: #888;
 }
 
-.join_us_box .row .btn_submit {
+.join_us_box .bottomForm .inner .row .btn_submit {
+    padding: 0 0;
+    margin: 0 0;
     border: none;
     cursor: pointer;
-    display: inline-block;
-    width: 350px;
+    width: 360px;
     height: 48px;
     background: #ececec;
     border-radius: 5px;
@@ -144,3 +242,16 @@ ul {
 }
 
 
+.join_us_box .bottomForm .inner:last-of-type {
+    padding-bottom: 100px;
+}
+
+.join_us_box .bottomForm .inner {
+    max-width: 620px;
+    margin: 0 auto;
+    padding: 0 0 40px;
+}
+
+.join_us_box bottomForm .inner .row {
+    margin-top: 40px;
+}
