--- a/src/main/webapp/css/list_style.css
+++ b/src/main/webapp/css/list_style.css
@@ -3,6 +3,7 @@
 		margin-left: 450px;
 		margin-top: 120px;
 		margin-bottom: 100px;
+		height: 600px;
 	}
 	.container table {
 		margin-top: 30px;
