--- a/src/main/webapp/css/cart.css
+++ b/src/main/webapp/css/cart.css
@@ -303,9 +303,12 @@ div {
 
 .cart_div5 {
     max-width: 1240px;
+	position: sticky;
+	top: 100px;
     margin: 0 auto;
     padding: 0 60px;
     height: 380.58px;
+/* 	height: auto; */
 }
 
 .cart_div6 {
