--- a/src/main/webapp/css/update.css
+++ b/src/main/webapp/css/update.css
@@ -150,3 +150,98 @@ body {
     background: #ececec;
     text-align: center;
 }
+
+.anniversary {
+			border: 1px solid #ffca18;
+			border-radius: 5px;
+			margin: 30px 30px;
+			padding: 50px 50px;
+}
+
+		
+		.yellowBtn {
+			width: 200px;
+			height: 33px;
+		}
+		
+		.textBlack {
+			color: #000000;
+			font-size: 14px;
+			font-weight: 800;
+		}
+		
+		.textRed {
+			color: #FF0000;
+		}
+		
+		.textGreen {
+			color: #46cfa7;
+			font-weight: bold;
+			font-size: 16px;
+			letter-spacing: -0.5px;
+		}
+		
+		.textSubject {
+			color: #000000;
+			font-size: 22px;
+			font-weight: bold;
+		}
+		
+		.textNormal {
+			color: #878787;
+			font-size: 14px;
+			font-weight: bold;
+		}
+		
+		#annInsert {
+			margin: 40px auto;
+			border: none;
+			width: 100%;
+			text-align: center;			
+		}
+		
+		#annInsert td{
+			padding-top: 5px;
+			padding-bottom: 15px;
+			border-bottom: 1px solid #efefef;
+		}
+				
+		.d_day_cell {
+			width: 80px;
+			color: #46cfa7;
+			font-size: 16pt;
+			height: 20px;
+			font-weight: bold;
+		}
+		
+		.date_cell {
+			width: 150px;
+			color: #676767;
+			font-size: 18px; 
+		}
+		
+		.ann_name_cell {
+			text-align: left;
+			width: 250px;
+			color: #676767;
+			font-size: 18px;
+		}
+		
+		.repeat_cell {
+			width: 100px;
+			color: #676767;
+			font-size: 18px; 
+		}
+		
+		.update_cell, .delete_cell {
+			width: 50px;
+			color: #878787;
+			font-size: 15px;
+			text-decoration: underline;
+		}	
+							
+		.updateForm input[type="radio"] {
+			width: 100px;
+		}
+
+		
