--- a/src/main/webapp/css/itemDetail.css
+++ b/src/main/webapp/css/itemDetail.css
@@ -6,15 +6,15 @@ html {
 
 .contents_container {
 	width: 1120px;
-    margin: 0 auto;
+	margin: 0 auto;
 }
 
 .navigation {
 	height: 80px;
-    width: 1120px;
-    margin: 0 auto;
-    padding: 40px 0;
-   	color: #999999;
+	width: 1120px;
+	margin: 0 auto;
+	padding: 40px 0;
+	color: #999999;
 	font-size: 13px;
 }
 
@@ -51,7 +51,6 @@ html {
 }
 
 /*  */
-
 .inbox {
 	width: 1120px;
 	height: auto;
@@ -136,7 +135,6 @@ html {
 	float: left;
 	text-align: left;
 	font-weight: 450;
-	
 }
 
 #label_name_date, #label_name_option {
@@ -171,14 +169,14 @@ html {
 	color: #999999;
 	font-size: 14px;
 	display: block;
-} 
+}
 
 .required_mark {
 	color: #ffd324;
 }
 
 .calendar_right {
-	margin-left:160px;
+	margin-left: 160px;
 	text-align: right;
 }
 
@@ -277,7 +275,7 @@ html {
 	background-color: #dddddd;
 }
 
-.clear{
+.clear {
 	clear: both;
 }
 
@@ -320,7 +318,7 @@ html {
 .middle_nav .active {
 	border-top: solid 2px #ffd324;
 	border-bottom: none;
-	color: black;
+	color: #222222;
 }
 
 .radiobtnA.checked, .radiobtnB.checked {
@@ -328,36 +326,38 @@ html {
 }
 
 .review_title {
-	border-top: solid 10px #f9f9f9;
-	margin: 30px 0 0 0;
+	border-top: solid 10px #f9f9f9; margin : 30px 0 0 0;
 	width: 1120px;
 	padding: 30px 0px 0;
-    font-size: 26px;
-    line-height: 38px;
-    font-weight: 500;
-    color: #222;
-    display:inline-box;
+	font-size: 26px;
+	line-height: 38px;
+	font-weight: 500;
+	color: #222;
+	margin: 30px 0 0 0; width : 1120px; padding : 30px 0px 0; font-size :
+	26px; line-height : 38px; font-weight : 500; color : #222;
+	display: inline-box;
 }
 
 .review_title .point_event {
-    margin-left: 25px;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 200;
-    color: #787878;
-    vertical-align: 3px;
+	margin-left: 25px;
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: 200;
+	color: #787878;
+/* 	vertical-align: 3px; */
 }
 
 .review_write_btn {
 	margin: 7px 0 0 0;
-    float: right;
+	float: right;
 }
+
 .review_write_btn .btn_a {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 500;
-    color: #46cfa7;;
-    text-decoration: underline;
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: 500;
+	color: #46cfa7;;
+	text-decoration: underline;
 }
 
 .review_inbox .row {
@@ -381,16 +381,15 @@ html {
 	padding-bottom: 10px;
 	font-size: 18px;
 	color: #888888;
-	
 }
 
 .tabs .tab-link {
- 	display: inline-block; 
+	display: inline-block;
 }
 
-.tabs .tab-link.current .btn{
+.tabs .tab-link.current .btn {
 	border-bottom: solid 2px #ffd324;
-	color: black;
+	color: #222222;
 	font-weight: 400;
 }
 
@@ -416,6 +415,7 @@ html {
 	width: 550px;
 	font-size: 16px;
 	font-weight: 300px;
+	color: #222222
 }
 
 .row .td3, .row .td4 {
@@ -426,21 +426,25 @@ html {
 }
 
 .row .td5 {
-	padding: 170px;
+	padding: 25px 0 40px 170px;
 	font-size: 14px;
 	color: #888888;
-	vertical-align: top;
 }
 
+.row .td5 img {
+	display: block;
+	max-width: 224px;
+}
 
 /* 리뷰 ajax에 쓰이는 코드  */
-
-.tab-content{
+.tab-content {
 	display: none;
 }
-.tab-content.current{
+
+.tab-content.current {
 	display: inherit;
 }
+
 #hidden {
 	display: none;
 }
