--- a/src/main/webapp/css/list_style.css
+++ b/src/main/webapp/css/list_style.css
@@ -1,9 +1,9 @@
 	@charset "UTF-8";
 	.container {
-		margin-left: 450px;
+		margin-left: 250px;
 		margin-top: 120px;
 		margin-bottom: 100px;
-		height: 600px;
+		width: 1240px;
 	}
 	.container table {
 		margin-top: 30px;
