--- a/src/main/webapp/css/list_style.css
+++ b/src/main/webapp/css/list_style.css
@@ -1,13 +1,12 @@
 	@charset "UTF-8";
 	.container {
-		margin-left: 250px;
-		margin-top: 120px;
-		margin-bottom: 100px;
+		margin: 100px auto;
 		width: 1240px;
+		padding-left:60px;
 	}
 	.container table {
 		margin-top: 30px;
-		margin-bottom: 100px;
+		margin-bottom: 50px;
 		width: 800px;
 		text-align: center;
 		border: 1px solid #ececec;
