장바구니 css 등등

--- a/src/main/webapp/css/cart.css
+++ b/src/main/webapp/css/cart.css
@@ -121,13 +121,9 @@
 
 
 
-
-
-
-
 .cart_td3 {	
 	display: table-cell;
-/*     vertical-align: middle; */
+    vertical-align: middle;
 }
 
 .cart_span8 {
@@ -404,8 +400,3 @@ p {
     cursor: pointer;
     
 }
-
-
-
-
-
