상품리스트 css수정

--- a/src/main/webapp/css/quick.css
+++ b/src/main/webapp/css/quick.css
@@ -4,18 +4,19 @@
 	margin-bottom: 65px;
 }
 
-#container div {
+#shop_container div {
 	position: relative;
     text-align: right;
+    padding: 0 6px;
 }
 
-#container div select {
+#shop_container div select {
 	width: 93px;
     font-size: 15px;
     border: none;
 }
 
-#container div select:focus {
+#shop_container div select:focus {
 	outline: none;
 }
 
@@ -29,6 +30,20 @@
 }
 
 .quick_banner_img > div {
+	width: 1120px;
+    margin: 0 auto;
+}
+
+.flowerList_banner_img {
+    background-image: url(../img/category_flower_w.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center right;
+    background-color: #eeece8;
+    height: 300px;
+}
+
+.flowerList_banner_img > div {
 	width: 1120px;
     margin: 0 auto;
 }
@@ -65,11 +80,11 @@
 
 .quick_item_box {
 	display: inline-block;
+	padding: 0 7px;
+    border-collapse: collapse;
+    height: 420px;
 }
 
-.quick_item_box:not(:last-child){
-	margin-right: 13px;
-}
 
 .quick_item_desc {
 	display: inline-block;
