--- a/src/main/webapp/css/mypage_reviewBefore.css
+++ b/src/main/webapp/css/mypage_reviewBefore.css
@@ -62,29 +62,29 @@ ul.tabs li.current {
 }
 
 
-.mypage_orderHistory_all {
+.mypage_reviewBefore_all {
 	float: right;
 	height: 100%;
 	padding: 0;
 	margin: 0;
 }
 
-#mypage_orderHistory_title {
+#mypage_reviewBefore_title {
 	font-size: 20px;
 	margin-left: 20px;
 }
 
-.mypage_orderHistory_main {
+.mypage_reviewBefore_main {
 	width: 800px;
 }
 
-#mypage_orderHistory_table {
+#mypage_reviewBefore_table {
 	width: 800px;
 	margin-bottom: 200px;
 	margin-top: 30px;
 }
 
-#mypage_orderHistory_table_td_s {
+#mypage_reviewBefore_table_td_s {
 	background-color: #f7f7f7;
 	height: 50px;
 	font-size: 13px;
@@ -93,7 +93,7 @@ ul.tabs li.current {
 	width: 150px;
 }
 
-#mypage_orderHistory_table_td_b {
+#mypage_reviewBefore_table_td_b {
 	background-color: #f7f7f7;
 	height: 50px;
 	font-size: 13px;
@@ -101,12 +101,12 @@ ul.tabs li.current {
 	text-align: center;
 }
 
-#mypage_orderHistory_table_th {
+.mypage_reviewBefore_table_th {
 	text-align: center;
 	font-size: 15px;
 }
 
-#mypage_orderHistory_situation {
+#mypage_reviewBefore_situation {
 	text-align: center;
 	font-size: 15px;
 	font-weight: 500;
@@ -114,14 +114,14 @@ ul.tabs li.current {
 }
 
 
-#mypage_orderHistory_td {
+#mypage_reviewBefore_td {
 	margin: 0;
 	text-align: left;
 	border-bottom: 1px solid #aaaaaa;
 	
 }
 
-#mypage_orderHistory_img {
+#mypage_reviewBefore_img {
 	width: 100px;
 	height: auto;
 	background: no-repeat;
@@ -130,17 +130,20 @@ ul.tabs li.current {
 	float: left;
 }
 
-#mypage_orderHistory_span_one {
+#mypage_reviewBefore_span_one {
 	font-weight: 500;
 	margin: 10px;
 	font-size: 15px;
 	text-align: center;
 }
 
-#mypage_orderHistory_span_two {
+#mypage_reviewBefore_span_two {
 /* 	color: #aaaaaa; */
 	margin: 10px;
 	font-size: 15px;
 	font-weight: 300;
 	text-align: center;
+}
+#mypage_reviewBefore_btn{
+	width: 50px;
 }
