--- a/src/main/webapp/css/quick.css
+++ b/src/main/webapp/css/quick.css
@@ -20,6 +20,11 @@
 	outline: none;
 }
 
+#container div:first-child {
+	padding: 0 8px;
+    font-size: 25px;
+    line-height: 35px;
+}
 .quick_banner_img {
     background-image: url(../img/quick_banner.png);
     background-repeat: no-repeat;
@@ -44,6 +49,20 @@
 }
 
 .flowerList_banner_img > div {
+	width: 1120px;
+    margin: 0 auto;
+}
+
+.classList_banner_img {
+	background-image: url(../img/category_class_w.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center right;
+    background-color: #eeece8;
+    height: 300px;
+}
+
+.classList_banner_img > div {
 	width: 1120px;
     margin: 0 auto;
 }
@@ -85,6 +104,14 @@
     height: 420px;
 }
 
+.class_item_box {
+	display: inline-block;
+    padding: 0 7px;
+    border-collapse: collapse;
+    height: 420px;
+    width: 33.333%;
+}
+
 
 .quick_item_desc {
 	display: inline-block;
@@ -104,7 +131,7 @@
     color: #787878;
 }
 .quick_item_img {
-	width: 265px;
+	width: 100%;
 	height: 256px;
 }
 
