--- a/src/main/webapp/css/payment_info.css
+++ b/src/main/webapp/css/payment_info.css
@@ -1,2 +1,140 @@
 @charset "UTF-8";
 
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
+}
+
+body {
+  box-sizing: border-box;
+}
+
+.purchase_complete_container {
+    padding-bottom: 100px;
+}
+
+.purchase_complete_container .checkout {
+    padding: 40px 20px;
+    background-color: #ffcd32;
+    text-align: center;
+}
+
+.purchase_complete_container .checkout .checkout_title {
+    font-size: 20px;
+    line-height: 32px;
+    font-weight: 700;
+    letter-spacing: -.3px;
+    color: #0d0d0d;
+}
+
+.purchase_complete_container .checkout .checkout_desc {
+    display: block;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 100;
+    letter-spacing: -.21px;
+    color: #3a3a3a;
+}
+
+.purchase_complete_container .checkout .checkout_order_num {
+    display: block;
+    max-width: 280px;
+    padding: 10px 10px;
+    margin: 0 auto;
+    border-radius: 20px;
+    background-color: #fff;
+    text-align: center;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 100;
+    letter-spacing: -.21px;
+    color: #3a3a3a;
+}
+
+.purchase_complete_container .checkout .bank_info {
+    display: block;
+    max-width: 320px;
+    padding: 20px;
+    margin: 0 auto;
+    border-radius: 5px;
+    background-color: #fff;
+    text-align: left;
+}
+
+.purchase_complete_container .checkout .bank_info .th {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 300;
+    letter-spacing: -.21px;
+    color: #222;
+}
+
+.purchase_complete_container .checkout .bank_info .th>span {
+    display: block;
+    font-size: 13px;
+    line-height: 20px;
+    font-weight: 100;
+    letter-spacing: -.2px;
+    color: #787878;
+}
+
+.purchase_complete_container .checkout .bank_info .td {
+    display: block;
+}
+
+.purchase_complete_container .checkout .info_more {
+    display: block;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 100;
+    letter-spacing: -.21px;
+    color: #222;
+}
+
+.checkout_submit_box {
+    padding-bottom: 60px;
+}
+
+.submit_button {
+    position: relative;
+    margin: 0;
+}
+
+.submit_button .show_detail {
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: 0 0;
+    outline: 0;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    height: 48px;
+    background: #ffcd32;
+    text-align: center;
+    font-size: 14px;
+    line-height: 48px;
+    font-weight: 300;
+    letter-spacing: -.21px;
+    color: #222;
+    border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
