--- a/src/main/webapp/css/quick.css
+++ b/src/main/webapp/css/quick.css
@@ -20,7 +20,7 @@
 	outline: none;
 }
 
-#container div:first-child {
+.shop_class_title {
 	padding: 0 8px;
     font-size: 25px;
     line-height: 35px;
@@ -102,7 +102,9 @@
 	padding: 0 7px;
     border-collapse: collapse;
     height: 420px;
+	width: 25%;
 }
+
 
 .class_item_box {
 	display: inline-block;
