--- a/src/main/webapp/css/letter.css
+++ b/src/main/webapp/css/letter.css
@@ -621,7 +621,7 @@ b {
     height: 20px;
     font-size: 14px;
     line-height: 20px;
-    font-weight: 100;
+    font-weight: normal;
     letter-spacing: -.21px;
     color: #222;
     position: relative;
