--- a/src/main/webapp/css/classReserv.css
+++ b/src/main/webapp/css/classReserv.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+.shop_class_layout {
+    margin: 40px 0 100px;
+}
+
 .category_product_image {
 	display: inline-block;
 }
@@ -39,7 +43,7 @@
 	font-size: 16px;
     font-weight: 300;
     color: #a3a3a3;
-    margin-bottom: 6px;
+    margin-bottom: 10px;
 }
 
 .shop_class_name {
@@ -52,37 +56,57 @@
 .shop_class_price {
 	font-size: 26px;
     line-height: 30px;
-    font-weight: 600;
+    font-weight: 500;
     margin-bottom: 10px;
 }
 
 .shop_class_infobox2 {
+	display: flex;
+    align-items: center;
+    border-top: 1px solid #e4e4e4;
+    border-bottom: 1px solid #e4e4e4;
+    padding: 10px 0 10px;
+    font-size: 15px;
+    line-height: 26px;
+    height: 55px;
+    color: #4c4c4c;
+    font-weight: 500;
+}
+
+.shop_class_infobox2 p:first-child {
+    margin-right: 8px;
+}
+
+.shop_class_infobox3 {
 	font-size: 17px;
     line-height: 45px;
-    margin-bottom: 19px;
+	margin: 20px 0;
 }
-.shop_class_infobox2 ul {
+.shop_class_infobox3 ul {
 	display: inline-block;
 }
 
-.shop_class_infobox2 ul li {
-	background-color: #e4e4e4;
+.shop_class_infobox3 ul li {
+	background-color: #f7f7f7;
     padding: 0px 16px;
     display: inline-block;
     border-radius: 5px;
 }
 
-.shop_class_infobox2 ul li a{
+.shop_class_infobox3 ul li a{
 	color: gray;
+    font-size: 15px;
 }
 
 .shop_class_time_box {
-	margin-bottom: 25px;
+    margin-bottom: 25px;
+    font-size: 0;
 }
 
 .shop_class_label {
-	width: 100px;
+    width: 150px;
     display: inline-block;
+    font-size: 16px;
 }
 
 .shop_class_time_input {
@@ -97,6 +121,88 @@
 .shop_class_time_input:focus {
 	outline: none;
 }
+
+.shop_class_num_box {
+    line-height: 46px;
+    margin-bottom: 20px;
+}
+
+.shop_class_num_box span {
+    display: inline-block;
+}
+
+.shop_class_btn {
+	border: transparent;
+    padding: 5px 8px;
+    border-radius: 25px;
+    font-size: 18px;
+    font-weight: 100;
+    color: gray;
+    position: relative;
+    top: 1px;
+}
+
+.class_minus_btn {
+	padding: 5px 10px;
+}
+
+.shop_class_num {
+	width: 30px;
+    border: none;
+    text-align: center;
+    font-size: 15px;
+}
+
+.shop_class_price_box {
+	background-color: #f7f7f7;
+    height: 68px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 17px;
+    border-radius: 4px;
+    width: 490px;
+}
+
+.shop_class_price_box:first-child {
+	    display: inline-block;
+}
+
+.shop_class_price_box:last-child {
+    float: right;
+    display: inline-block;
+}
+
+.shop_class_total_price {
+	display: flex;
+    align-items: baseline;
+    justify-content: flex-end;
+    margin: 40px 0 20px;
+}
+
+.shop_class_total_price:first-child {
+    font-size: 15px;
+    margin-right: 10px;
+}
+
+.shop_class_total_price span:first-child {
+    margin-right: 15px;
+    font-size: 14px;
+}
+
+.shop_class_total_price span:last-child {
+    font-size: 27px;
+    font-weight: 500;
+}
+
+.shop_class_submit_btn{
+    width: 100%;
+    border: none;
+    height: 50px;
+    background-color: #f7cc00;
+    border-radius: 4px;
+}
+
 
 
 
